--- a/index.html
+++ b/index.html
@@ -3,38 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio | Earl John Duruin</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<!-- HERO / HOME -->
+<header>
+    <div class="logo">
+        <i>E</i>
+        <div class="logo-text">Earl John Duruin</div>
+    </div>
+
+    <nav>
+        <div class="togglebtn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <ul class="navlinks">
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#certification">Certification</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
 <div class="hero-header" id="home">
     <div class="wrapper">
-        <header>
-            <div class="logo">
-                <i>E</i>
-                <div class="logo-text">Earl John Duruin</div>
-            </div>
-
-            <nav>
-                <div class="togglebtn">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-
-                <ul class="navlinks">
-                    <li><a href="#home" class="active">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#certification">Certification</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-
         <div class="container">
             <div class="hero-pic">
                 <img src="image/IMG_9107.jpeg" alt="Profile picture">
@@ -54,10 +54,10 @@
                 </div>
 
                 <div class="social">
-                    <a href="https://www.facebook.com" target="_blank">
+                    <a href="https://www.facebook.com/earl.john.duruin" target="_blank">
                         <img src="image/facebook.png" alt="Facebook">
                     </a>
-                    <a href="https://www.instagram.com" target="_blank">
+                    <a href="https://www.instagram.com/edjieey/" target="_blank">
                         <img src="image/instagram.png" alt="Instagram">
                     </a>
                 </div>
@@ -70,11 +70,9 @@
     <hr class="section-divider">
 </div>
 
-<!-- About -->
 <section id="about" class="section">
     <div class="wrapper about-container">
         
-        <!-- LEFT COLUMN -->
         <div class="about-text">
             <h1>About Me</h1>
             <h2>I'm <span>Earl John</span></h2>
@@ -85,7 +83,6 @@
             </p>
         </div>
 
-        <!-- RIGHT COLUMN -->
         <div class="about-cards">
             <div class="card">
                 <small>Birthday</small>
@@ -118,16 +115,13 @@
     <hr class="section-divider">
 </div>
 
-<!-- SKILLS -->
 <section id="skills" class="section">
     <div class="wrapper skills-wrapper">
 
-        <!-- Image -->
         <div class="skills-image">
             <img src="image/skills.gif" alt="Skills illustration">
         </div>
 
-        <!-- Skills Content -->
         <div class="skills-content">
             <h1>Skills</h1>
             <p>Here are some of my core skills and what I use them for:</p>
@@ -171,39 +165,33 @@
             </div>
         </div>
     </div>
-
 </section>
 
 <div class="container">
     <hr class="section-divider">
 </div>
 
-<!-- EDUCATION -->
 <section id="education" class="section">
     <div class="wrapper education-wrapper">
 
-        <!-- Image -->
         <div class="education-image">
             <img src="image/library.gif" alt="Education illustration">
         </div>
 
-        <!-- Education Content -->
         <div class="education-content">
             <h1>Education</h1>
             <p>Here are some highlights of my academic background:</p>
 
             <div class="education-list">
-
                 <div class="education-card">
                     <h3>BS Information Technology</h3>
                     <p>STI College Lucena (2022 - 2026)</p>
-                    </div>
+                </div>
 
                 <div class="education-card">
                     <h3>Computer Systems Servicing Strand</h3>
                     <p>Gumaca National High-School (2020 - 2022)</p>
                 </div>
-
             </div>
         </div>
 
@@ -217,18 +205,15 @@
 <section id="certification" class="section">
     <div class="wrapper certification-wrapper">
 
-        <!-- Image -->
         <div class="certification-image">
             <img src="image/certification.gif" alt="Certification illustration">
         </div>
 
-        <!-- Certification Content -->
         <div class="certification-content">
             <h1>Certification</h1>
             <p>Here are some of my certifications and what I gained from them:</p>
 
             <div class="certification-list">
-
                 <div class="certification-card">
                     <h3>Oracle Academy Java Fundamentals</h3>
                     <p>Completed an intensive Java course focused on core concepts and object-oriented programming.</p>
@@ -236,33 +221,30 @@
 
                 <div class="certification-card">
                     <h3>Linux Professional Institute Systems Administration</h3>
-                    <p>Developed skills in installing, configuring, and maintaining Linux systems, including user management, networking, security, and system troubleshooting.</p>
+                    <p>Developed skills in installing, configuring, and maintaining Linux systems.</p>
                 </div>
-
-                <!-- Add more certifications here -->
             </div>
         </div>
 
     </div>
 </section>
 
-
 <div class="container">
     <hr class="section-divider">
 </div>
 
-<!-- CONTACT -->
 <section id="contact" class="section">
     <div class="wrapper">
         <h1>Contact</h1>
-        <p>You can add a contact form or your email here.</p>
+        <p>Feel free to reach out via email or social media!</p>
     </div>
 </section>
+
 <div class="container">
     <hr class="section-divider">
 </div>
-<script src="function.js"></script>
 
+<script src="function.js"></script>
 
 </body>
 </html>
