--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
+    <div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+    </div>
+
 <header>
     <div class="logo">
         <i>E</i>
@@ -26,6 +30,7 @@
         <ul class="navlinks">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#certification">Certification</a></li>
@@ -113,6 +118,37 @@
 
     </div>
 </section>
+
+
+
+<section id="projects" class="section">
+    <hr class="section-divider">
+
+    <div class="projects-wrapper">
+
+        <div class="projects-image">
+            <img src="image/projects.gif" alt="projects illustration">
+        </div>
+
+        <div class="projects-content">
+            <h1>Projects</h1>
+            <p>Here are some of my projects:</p>
+
+            <div class="projects-list">
+                <div class="project-card">
+                    <h3>DMDentalNet</h3>
+                    <p>
+                        A responsive and online web-based appointment managament system for DeGuzman-Manalo Dental Clinic.
+                        Built with HTML, CSS, and JavaScript.
+                    </p>
+                </div>
+                
+            </div>
+        </div>
+
+    </div>
+</section>
+
 
 <div class="container">
     <hr class="section-divider">
@@ -275,4 +311,7 @@
 <script src="function.js"></script>
 
 </body>
+<footer>
+    <p>&copy; 2025 Earl John Duruin. All rights reserved.</p>
+</footer>
 </html>
