--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <div class="logo-text">Earl John Duruin</div>
     </div>
 
+    <div id="theme-switch" class="theme-switch" title="Toggle Light/Dark Mode">
+        <svg id="theme-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+        </svg>
+    </div>
+
     <nav>
         <div class="togglebtn">
             <span></span>
@@ -28,12 +34,12 @@
         </div>
 
         <ul class="navlinks">
-            <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#certification">Certification</a></li>
+            <li><a href="#home" class="active" title="Home" >Home</a></li>
+            <li><a href="#about" title="About">About</a></li>
+            <li><a href="#projects" title="Projects">Projects</a></li>
+            <li><a href="#skills" title="Skills">Skills</a></li>
+            <li><a href="#education" title="Education">Education</a></li>
+            <li><a href="#certification" title="Certification">Certification</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -78,7 +84,7 @@
     <hr class="section-divider">
 </div>
 
-<section id="about" class="section">
+<section id="about" class="section" >
     <div class="wrapper about-container">
         
         <div class="about-text">
@@ -97,12 +103,12 @@
                 <h3>May 21, 2004</h3>
             </div>
             <div class="card">
-                <small>Age</small>
-                <h3>21</h3>
-            </div>
-            <div class="card">
                 <small>City</small>
                 <h3>Atimonan Quezon, PH</h3>
+            </div>
+            <div class="card">
+                <small>Age</small>
+                <h3>21</h3>
             </div>
             <div class="card">
                 <small>Email</small>
@@ -118,8 +124,6 @@
 
     </div>
 </section>
-
-
 
 <section id="projects" class="section">
     <hr class="section-divider">
@@ -304,9 +308,6 @@
 
     </div>
 </section>
-
-
-
 
 <script src="function.js"></script>
 
